Prevent image in image carousel from stretching

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ img {
 }
 
 #carouselExampleControls {
-    padding: 50px 10%;
+    padding: 50px 0;
 }
 
 #carouselExampleControls .carousel-item .d-flex {
@@ -139,6 +139,7 @@ img {
 #carouselExampleControls .carousel-item img {
     height: 800px;
     max-width: 48%;
+    object-fit: cover;
 }
 
 main.contact-container {
